[package]
name = "code_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
naga = { version = "0.9", features = ["wgsl-in"]}
wgpu = "0.13"
quote = "1"
proc-macro2 = "1"
thiserror = "1"

[dev-dependencies]
trybuild = "1"